# DynamDnsAws

./: .gitignore  Dockerfile  LICENCE  README.md  build_image.sh  docker-compose.yaml  pyproject.toml  requirements.txt
app/: dynamic_dns.py  dynamic_dns_aws.py
etc/: dynamic_dns.yaml
